[tool.poetry]
name = "gdbundle-pycortexmdebug"
version = "0.0.3"
description = "gdbundle wrapper for PyCortexMDebug"
authors = ["Tyler Hoffman <tyler@memfault.com>"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "*"
# Unfortunately PyCortexMDebug doesn't do any proper releases to PyPi,
# so pin it to a git revision
cmdebug = {git = "https://github.com/bnahill/PyCortexMDebug.git", rev = "77e9717a0e7c5b44214bdf70fbddf376cf2e8a7d"}
gdbundle = "~0.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
