[tool.poetry]
name = "gdbundle-pycortexmdebug"
version = "0.0.7"
description = "gdbundle wrapper for PyCortexMDebug"
readme = "README.md"
authors = ["Tyler Hoffman <tyler@memfault.com>"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=2.7,<2.8 || >=3.5.0"
# TODO if PyCortexMDebug is deployed to PyPi, update to include this dependency,
# and remove lxml transitive dep
# cmdebug = "*"
lxml = "^4.5.2"

gdbundle = "~0.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
